--- a/src/app/itt/activity/activity.component.scss
+++ b/src/app/itt/activity/activity.component.scss
@@ -2,6 +2,19 @@
   margin: 5px;
   text-align: center;
 }
+
+.cal-event-title {
+  a:hover {
+    color: hotpink;
+  }
+}
+
+a:hover {
+  background: #FFDD00;
+  color: #AAAAAA;
+}
+
+
 .badge {
   margin-right: 5px;
 }
