Add teachin activity list and edit components

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,51 @@
-<h1>admin</h1>
+<div fxLayout="row" fxLayoutWrap="wrap">
+  <div fxFlex.gt-sm="66.66" fxFlex.gt-md="66.66%" fxFlex="100">
+    <md-card>
+      <md-card-title>Admin</md-card-title>
+      <md-tab-group class="app-mat-tab">
+        <md-tab label="Activitati">
+          <div>
+            Activitati add
+          </div>
+        </md-tab>
+        <md-tab label="Studenti">
+          <md-tab-group class="app-mat-tab">
+            <md-tab label="Adaugare">
+              add stud component
+            </md-tab>
+            <md-tab label="Listare">
+              add teach component
+            </md-tab>
+          </md-tab-group>
+        </md-tab>
+        <md-tab label="Profesori">
+          <md-tab-group class="app-mat-tab">
+            <md-tab label="Adaugare">
+              add stud component
+            </md-tab>
+            <md-tab label="Listare">
+              add teach component
+            </md-tab>
+          </md-tab-group>
+        </md-tab>
+      </md-tab-group>
+    </md-card>
+  </div>
+  <div fxFlex.gt-sm="33.33" fxFlex.gt-md="33.33%" fxFlex="100">
+    <md-card>
+      <div class="app-card-title">
+        <div fxLayout="row" fxLayoutAlign="start center">
+          <div fxLayout="column">
+            <h4>Weather</h4>
+          </div>
+          <span fxFlex></span>
+          <button md-icon-button>
+            <md-icon>sync</md-icon>
+          </button>
+        </div>
+      </div>
+      <div class="app-card-content">
+      </div>
+    </md-card>
+  </div>
+</div>
