--- a/src/app/admin/activity-load/activity-load.component.html
+++ b/src/app/admin/activity-load/activity-load.component.html
@@ -1,102 +1,118 @@
-
-
-
-
-<!--Predare-->
-<div fxLayout="row" fxLayoutWrap="wrap" fxLayoutAlign=" start" class="app-file-upload">
-  <md-card fxFlex="100%">
-    <div class="app-card-title">
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <div fxLayout="column">
-          <h4></h4>
-        </div> <span fxFlex></span> </div>
-      <md-divider></md-divider>
-    </div>
-    <div class="app-card-content">
-
-      <div  fxLayout="row" fxLayoutWrap="wrap" fxLayoutAlign="start">
-        <div fxFlex.gt-sm="20" fxFlex.gt-xs="50" fxFlex="100"  class="pr-1">
-          <h6>Select files</h6>
-          <div class="file-type" ng2FileDrop
-               [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
-               (fileOver)="fileOverBase($event)"
-               [uploader]="uploader">Base drop zone</div>
-
-          <div class="file-type" ng2FileDrop
-               [ngClass]="{'another-file-over-class': hasAnotherDropZoneOver}"
-               (fileOver)="fileOverAnother($event)"
-               [uploader]="uploader">Another drop zone</div>
-
-          <p>Multiple</p>
-          <input class="mrgn-b-md" type="file" ng2FileSelect [uploader]="uploader" multiple  /><br/>
-
-          <div class="clearfix"></div>
-
-          <p>Single</p>
-          <input type="file" ng2FileSelect [uploader]="uploader" />
-        </div>
-        <div fxFlex.gt-sm="80" fxFlex.gt-xs="50" fxFlex="100">
-          <div class="pad-wrap">
-
-            <h6  fxLayout="row">
-              <span fxFlex>Upload queue</span>
-              <span>Queue length: {{ uploader?.queue?.length }}</span>
-            </h6>
-
-            <ngx-datatable
-              class="material ml-0 mr-0 mrgn-b-md"
-              [rows]="uploader.queue"
-              [columnMode]="'flex'"
-              [headerHeight]="50"
-              [footerHeight]="0"
-              [rowHeight]="'auto'">
-              <ngx-datatable-column name="Name" [flexGrow]="2">
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                  {{ row?.file?.name }}
-                </ng-template>
-              </ngx-datatable-column>
-              <ngx-datatable-column name="Size" *ngIf="uploader.options.isHTML5" [flexGrow]="1">
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                  {{ row?.file?.size/1024/1024 | number:'.2' }} MB
-                </ng-template>
-              </ngx-datatable-column>
-              <ngx-datatable-column name="Progress" *ngIf="uploader.options.isHTML5" [flexGrow]="1">
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                  <md-progress-bar mode="determinate" value="{{row.progress}}"></md-progress-bar>
-                </ng-template>
-              </ngx-datatable-column>
-              <ngx-datatable-column name="Status" [flexGrow]="1">
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                  <span *ngIf="row.isSuccess"><md-icon>check</md-icon></span>
-                  <span *ngIf="row.isCancel"><md-icon>cancel</md-icon></span>
-                  <span *ngIf="row.isError"><md-icon>delete</md-icon></span>
-                </ng-template>
-              </ngx-datatable-column>
-              <ngx-datatable-column name="Action" [flexGrow]="2">
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                  <button md-raised-button md-button-sm  type="button"
-                          (click)="row.upload()" [disabled]="row.isReady || row.isUploading || row.isSuccess">Upload</button>
-                  <button md-raised-button md-button-sm  type="button"
-                          (click)="row.cancel()" [disabled]="!row.isUploading">Cancel</button>
-                  <button md-raised-button md-button-sm  type="button"
-                          (click)="row.remove()">Remove
-                  </button>
-                </ng-template>
-              </ngx-datatable-column>
-            </ngx-datatable>
-
-            <div class="mrgn-b-md">
-              <p>Queue progress:</p>
-              <md-progress-bar mode="determinate" value="{{uploader.progress}}"></md-progress-bar>
-            </div>
-            <button md-raised-button md-button-sm  type="button"
-                    (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">Upload all</button>
-            <button md-raised-button md-button-sm  type="button"
-                    (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">Cancel all</button>
-            <button md-raised-button md-button-sm  type="button"
-                    (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">Remove all</button>
-          </div></div>
-      </div>
-    </div>
-  </md-card>
+<div fxLayout="row" fxLayoutWrap="wrap">
+  <div fxFlex="100">
+    <md-card>
+      <md-card-title>Admin</md-card-title>
+      <md-tab-group class="app-mat-tab">
+        <md-tab label="Adaugare activitati predare">
+          <!--Predare-->
+          <div fxLayout="row" fxLayoutWrap="wrap" fxLayoutAlign=" start" class="app-file-upload">
+            <md-card fxFlex="100%">
+              <div class="app-card-title">
+              </div>
+              <div class="app-card-content">
+                <form #ta_uploadForm="ngForm" fxFlex="100">
+                  <div fxLayout="row" fxLayoutWrap="wrap" fxLayoutAlign="start">
+                    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+                      <md-select name="academicYear"
+                                 (change)="changeTarget()"
+                                 fxFlex="100" placeholder="{{'ACADEMIC_YEAR_PLACEHOLDER' | translate}}"
+                                 [(ngModel)]="selectedAcademicYear"
+                                 required="true">
+                        <md-option *ngFor="let ay of academicYearOptions  | async" [value]="ay?.name">{{ ay?.name }}
+                        </md-option>
+                      </md-select>
+                    </div>
+                    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+                      <md-select name="semester"
+                                 placeholder="{{'SEMESTER_PLACEHOLDER' | translate}}"
+                                 (change)="changeTarget()"
+                                 [(ngModel)]="selectedSemester"
+                                 required="true">
+                        <md-option *ngFor="let sem of semesterOptions" [value]="sem">{{ sem}}</md-option>
+                      </md-select>
+                    </div>
+                    <br><br>
+                  </div>
+                  <div *ngIf="ta_uploadForm.valid" fxLayout="row" fxLayoutWrap="wrap" fxLayoutAlign="start">
+                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="100" fxFlex="100" class="pr-1">
+                      <div class="file-type" ng2FileDrop
+                           [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
+                           (fileOver)="fileOverBase($event)" (click)="teaching_activity_file.click()"
+                           [uploader]="uploader">Drop
+                      </div>
+                      <input type="file" class="app-hidden" #teaching_activity_file ng2FileSelect [uploader]="uploader"/>
+                    </div>
+                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="100" fxFlex="100">
+                      <div class="pad-wrap">
+                        <ngx-datatable
+                          class="material ml-0 mr-0 mrgn-b-md"
+                          [rows]="uploader.queue"
+                          [columnMode]="'flex'"
+                          [headerHeight]="50"
+                          [footerHeight]="0"
+                          [rowHeight]="'auto'">
+                          <ngx-datatable-column name="Name" [flexGrow]="2">
+                            <ng-template let-row="row" ngx-datatable-cell-template>
+                              {{ row?.file?.name }}
+                            </ng-template>
+                          </ngx-datatable-column>
+                          <ngx-datatable-column name="Progress" *ngIf="uploader.options.isHTML5" [flexGrow]="1">
+                            <ng-template let-row="row" ngx-datatable-cell-template>
+                              <md-progress-bar mode="determinate" value="{{row.progress}}"></md-progress-bar>
+                            </ng-template>
+                          </ngx-datatable-column>
+                          <ngx-datatable-column name="Status" [flexGrow]="1">
+                            <ng-template let-row="row" ngx-datatable-cell-template>
+                              <span *ngIf="row.isSuccess"><md-icon>check</md-icon></span>
+                              <span *ngIf="row.isCancel"><md-icon>cancel</md-icon></span>
+                              <span *ngIf="row.isError"><md-icon>delete</md-icon></span>
+                            </ng-template>
+                          </ngx-datatable-column>
+                          <ngx-datatable-column name="Action" [flexGrow]="2">
+                            <ng-template let-row="row" ngx-datatable-cell-template>
+                              <button md-raised-button md-button-sm type="button"
+                                      (click)="row.upload()"
+                                      [disabled]="row.isReady || row.isUploading || row.isSuccess">
+                                Upload
+                              </button>
+                              <button md-raised-button md-button-sm type="button"
+                                      (click)="row.cancel()" [disabled]="!row.isUploading">Cancel
+                              </button>
+                              <button md-raised-button md-button-sm type="button"
+                                      (click)="row.remove()">Remove
+                              </button>
+                            </ng-template>
+                          </ngx-datatable-column>
+                        </ngx-datatable>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </md-card>
+          </div>
+        </md-tab>
+        <md-tab label="Adaugare activitati de evaluare">
+          <div>
+            Evaluare
+          </div>
+        </md-tab>
+      </md-tab-group>
+    </md-card>
+  </div>
 </div>
+
+
+
+<ng-template #error_modal_duplicate_activities>
+  <div class="modal-header">
+    <button color="primary" class="close" (click)="close()">
+      <md-icon>close</md-icon>
+    </button>
+  </div>
+  <div class="modal-body">
+    <app-duplicate-teaching-activity-component [duplicateFields]="duplicateAtctivities" >
+    </app-duplicate-teaching-activity-component>
+  </div>
+  <md-icon (click)="close()" class="modal-confirm-btn">done</md-icon>
+</ng-template>
