--- a/src/app/admin/evaluation-activity-list/evaluation-activity-list.component.html
+++ b/src/app/admin/evaluation-activity-list/evaluation-activity-list.component.html
@@ -123,7 +123,7 @@
               <a md-icon-button="">
                 <md-icon>delete</md-icon>
               </a>
-              <a md-icon-button="" [routerLink]="['/teaching-activity', value]">
+              <a md-icon-button="" [routerLink]="['/admin/activity/evaluation', value]">
                 <md-icon>edit</md-icon>
               </a>
             </div>
