--- a/src/app/admin/teaching-activity-list/teaching-activity-list.component.html
+++ b/src/app/admin/teaching-activity-list/teaching-activity-list.component.html
@@ -144,7 +144,7 @@
               <a md-icon-button="">
                 <md-icon>delete</md-icon>
               </a>
-              <a md-icon-button="" [routerLink]="['/teaching-activity', value]">
+              <a md-icon-button="" [routerLink]="['/admin/activity/teaching', value]">
                 <md-icon>edit</md-icon>
               </a>
             </div>
