--- a/src/app/itt/participants-structure/participants-structure.component.scss
+++ b/src/app/itt/participants-structure/participants-structure.component.scss
@@ -5,7 +5,16 @@
 .cal-event {
   white-space: normal;
 }
+.app-tree{
+  padding-left: 1em;
+  padding-top: 1em;
+}
 
+.app-date-picker{
+  padding-right: 1em;
+  padding-top: 1em;
+  top:1%;
+}
 
 .header-button {
   position: absolute;
