Fix minor issues

--- a/src/app/security/session/login-view/login-view.component.html
+++ b/src/app/security/session/login-view/login-view.component.html
@@ -28,7 +28,7 @@
                           <div fxLayout="column">  <md-checkbox class="remember-me">Remember Me</md-checkbox></div><span fxFlex></span>
                            <div> <a [routerLink]="['/forgot-password']">Forgot Password?</a></div>
                         </div>
-                        <button class="mat-green" md-raised-button [disabled]="!form.valid">SIGN IN</button>
+                        <button class="mat-green" md-raised-button>SIGN IN</button>
                     </div>
                 </form>
             </div>
